--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <div class="container">
+    <div class="container-xl">
       <section class="row" style="height: 100vh">
         <div
           class="col-6 d-flex px-3 justify-content-center align-items-center"
@@ -139,7 +139,7 @@
             <div class="icon-container">
               <i class="bi bi-bank2"></i>
             </div>
-            <h4 class="my-3">Created by Scientists</h4>
+            <h5 class="my-3">Acne Scarring</h5>
             <p style="max-width: 250px" class="text-muted">
               Formulated in our labaratories and driven by 20 years of stem cell
               research, now available for at-home treatment
@@ -158,7 +158,7 @@
           <div style="max-width: 400px; height: 500px">
             <div class="icon-container">
               <i class="bi bi-bicycle"></i>            </div>
-            <h4 class="my-3">Trusted By Doctors</h4>
+            <h5 class="my-3">Hair Loss</h5>
             <p style="max-width: 250px" class="text-muted">
               Used in hundereds of clinics around the world to support patient
               results and recovery
@@ -178,7 +178,7 @@
             <div class="icon-container">
               <i class="bi bi-apple"></i>
             </div>
-            <h4 class="my-3">Created by Scientists</h4>
+            <h5 class="my-3">Inflammation and downtime</h5>
             <p style="max-width: 250px" class="text-muted">
               Formulated in our labaratories and driven by 20 years of stem cell
               research, now available for at-home treatment
@@ -198,7 +198,7 @@
             <div class="icon-container">
               <i class="bi bi-person-circle"></i>
             </div>
-            <h4 class="my-3">Trusted By Doctors</h4>
+            <h5 class="my-3">Trusted By Doctors</h5>
             <p p style="max-width: 250px" class="text-muted">
               Used in hundereds of clinics around the world to support patient
               results and recovery
@@ -212,7 +212,7 @@
           </div>
         </div>
       </section>
-      <section style="height: 100vh">
+      <section class="my-5">
         <div class="accordion" id="accordionExample">
           <div class="accordion-item">
             <h2 class="accordion-header" id="headingOne">
