--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           />
         </div>
       </section>
-      <section class="row" style="min-height: 500px">
+      <section class="row">
         <div
           class="col-4 d-flex px-3 justify-content-center align-items-center text-center"
         >
@@ -157,7 +157,8 @@
         >
           <div style="max-width: 400px; height: 500px">
             <div class="icon-container">
-              <i class="bi bi-bicycle"></i>            </div>
+              <i class="bi bi-bicycle"></i>
+            </div>
             <h5 class="my-3">Hair Loss</h5>
             <p style="max-width: 250px" class="text-muted">
               Used in hundereds of clinics around the world to support patient
@@ -212,101 +213,100 @@
           </div>
         </div>
       </section>
-      <section class="my-5">
-        <div class="accordion" id="accordionExample">
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="headingOne">
-              <button
-                class="accordion-button"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#collapseOne"
-                aria-expanded="true"
-                aria-controls="collapseOne"
+      <section class="py-5 faq">
+        <div>
+          <div class="text-center my-5">
+            <h1>Got Questions? We've Got Answers</h1>
+            <p class="my-3 fs-5">Navigate Through Our Platform With Ease</p>
+          </div>
+
+          <div class="accordion" id="accordionExample">
+            <div class="accordion-item border border-3 mt-3">
+              <h2 class="accordion-header text-dark" id="headingOne">
+                <button
+                  class="accordion-button bg-white shadow-none"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#collapseOne"
+                  aria-expanded="true"
+                  aria-controls="collapseOne"
+                >
+                  How do I get started with buying NFTS on CryptoArtHub?
+                </button>
+              </h2>
+              <div
+                id="collapseOne"
+                class="accordion-collapse collapse show"
+                aria-labelledby="headingOne"
+                data-bs-parent="#accordionExample"
               >
-                Accordion Item #1
-              </button>
-            </h2>
-            <div
-              id="collapseOne"
-              class="accordion-collapse collapse show"
-              aria-labelledby="headingOne"
-              data-bs-parent="#accordionExample"
-            >
-              <div class="accordion-body">
-                <strong>This is the first item's accordion body.</strong> It is
-                shown by default, until the collapse plugin adds the appropriate
-                classes that we use to style each element. These classes control
-                the overall appearance, as well as the showing and hiding via
-                CSS transitions. You can modify any of this with custom CSS or
-                overriding our default variables. It's also worth noting that
-                just about any HTML can go within the
-                <code>.accordion-body</code>, though the transition does limit
-                overflow.
+                <div class="accordion-body">
+                  To start buying NFTs, you need to first register and create an
+                  account on our platform. You then have to connect your
+                  cryptocurrency wallet, which will be used for transactions.
+                  From there, explore the marketplace and when you find an
+                  artwork that interests you, simply place a bid or purchase it
+                  directly.
+                </div>
               </div>
             </div>
-          </div>
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="headingTwo">
-              <button
-                class="accordion-button collapsed"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#collapseTwo"
-                aria-expanded="false"
-                aria-controls="collapseTwo"
+            <div class="accordion-item border border-3 mt-3">
+              <h2 class="accordion-header" id="headingTwo">
+                <button
+                  class="accordion-button collapsed bg-white shadow-none"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#collapseTwo"
+                  aria-expanded="false"
+                  aria-controls="collapseTwo"
+                >
+                  How can I ensure the safety of my transaction?
+                </button>
+              </h2>
+              <div
+                id="collapseTwo"
+                class="accordion-collapse collapse"
+                aria-labelledby="headingTwo"
+                data-bs-parent="#accordionExample"
               >
-                Accordion Item #2
-              </button>
-            </h2>
-            <div
-              id="collapseTwo"
-              class="accordion-collapse collapse"
-              aria-labelledby="headingTwo"
-              data-bs-parent="#accordionExample"
-            >
-              <div class="accordion-body">
-                <strong>This is the second item's accordion body.</strong> It is
-                hidden by default, until the collapse plugin adds the
-                appropriate classes that we use to style each element. These
-                classes control the overall appearance, as well as the showing
-                and hiding via CSS transitions. You can modify any of this with
-                custom CSS or overriding our default variables. It's also worth
-                noting that just about any HTML can go within the
-                <code>.accordion-body</code>, though the transition does limit
-                overflow.
+                <div class="accordion-body">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Consequatur nobis ratione, sed deserunt sunt voluptatem
+                  maiores repudiandae id laborum nisi? Natus vero odit debitis
+                  libero magni numquam nisi nemo exercitationem rem obcaecati
+                  est accusantium similique facere, inventore in facilis sit
+                  reprehenderit autem excepturi minima repudiandae?
+                </div>
               </div>
             </div>
-          </div>
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="headingThree">
-              <button
-                class="accordion-button collapsed"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#collapseThree"
-                aria-expanded="false"
-                aria-controls="collapseThree"
+            <div class="accordion-item border border-3 mt-3">
+              <h2 class="accordion-header" id="headingThree">
+                <button
+                  class="accordion-button collapsed bg-white shadow-none"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#collapseThree"
+                  aria-expanded="false"
+                  aria-controls="collapseThree"
+                >
+                  As an artist, how can I sell my work as NFTs?
+                </button>
+              </h2>
+              <div
+                id="collapseThree"
+                class="accordion-collapse collapse"
+                aria-labelledby="headingThree"
+                data-bs-parent="#accordionExample"
               >
-                Accordion Item #3
-              </button>
-            </h2>
-            <div
-              id="collapseThree"
-              class="accordion-collapse collapse"
-              aria-labelledby="headingThree"
-              data-bs-parent="#accordionExample"
-            >
-              <div class="accordion-body">
-                <strong>This is the third item's accordion body.</strong> It is
-                hidden by default, until the collapse plugin adds the
-                appropriate classes that we use to style each element. These
-                classes control the overall appearance, as well as the showing
-                and hiding via CSS transitions. You can modify any of this with
-                custom CSS or overriding our default variables. It's also worth
-                noting that just about any HTML can go within the
-                <code>.accordion-body</code>, though the transition does limit
-                overflow.
+                <div class="accordion-body">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Voluptatibus, atque. Iure totam quas commodi asperiores
+                  repellendus natus pariatur accusamus, adipisci delectus,
+                  aliquid ad quidem. Dolore illum fugit eum incidunt recusandae
+                  mollitia iste nulla modi ratione? Odit placeat ex molestiae
+                  nemo minima, enim quam labore neque reprehenderit culpa
+                  eligendi cum tempore?
+                </div>
               </div>
             </div>
           </div>
