made some changes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <div class="container-xl">
+    <div class="container-xxl">
       <section class="row" style="height: 100vh">
         <div
           class="col-6 d-flex px-3 justify-content-center align-items-center"
@@ -167,8 +167,7 @@
             <a
               class="text-dark pb-1 text-decoration-none border-bottom border-dark border-2"
               href="/our-science"
-              >Hear from Doctors
-              <i class="bi bi-arrow-right"></i>
+              >Hear from Doctors <i class="bi bi-arrow-up-right"></i>
             </a>
           </div>
         </div>
@@ -187,8 +186,7 @@
             <a
               class="text-dark pb-1 text-decoration-none border-bottom border-dark border-2"
               href="/our-science"
-              >Our Science
-              <i class="bi bi-arrow-right"></i>
+              >Our Science <i class="bi bi-arrow-up-right"></i>
             </a>
           </div>
         </div>
@@ -207,14 +205,13 @@
             <a
               class="text-dark pb-1 text-decoration-none border-bottom border-dark border-2"
               href="/our-science"
-              >Hear from Doctors
-              <i class="bi bi-arrow-right"></i>
+              >Hear from Doctors <i class="bi bi-arrow-up-right"></i>
             </a>
           </div>
         </div>
       </section>
       <section class="py-5 faq">
-        <div>
+        <div class="pb-5">
           <div class="text-center my-5">
             <h1>Got Questions? We've Got Answers</h1>
             <p class="my-3 fs-5">Navigate Through Our Platform With Ease</p>
